--- a/dts-consul/templates/ingress.yaml
+++ b/dts-consul/templates/ingress.yaml
@@ -1,24 +1,36 @@
 {{- if .Values.ingress.enabled -}}
-{{- $ingressPath := .Values.ingress.path -}}
+{{- $fullName := include "fullname" . -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: my-cool-ingress
+  name: {{ $fullName }}
   labels:
-    app.kubernetes.io/name: someName
+    app.kubernetes.io/name: dts-consul
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
-    kubernetes.io/ingress.class: traefik
+    # kubernetes.io/ingress.class: traefik
+    # kubernetes.io/tls-acme: "true"
+    # traefik.frontend.whitelistSourceRange: "198.103.152.51/32"
 spec:
+{{- if .Values.ingress.tls }}
+  tls:
+  {{- range .Values.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
     - host: {{ . }}
       http:
         paths:
-          - path: {{ $ingressPath }}
+          - path: /
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: {{ $fullName }}-ui
               servicePort: http
   {{- end }}
 {{- end }}
