--- a/dts-consul/values.yaml
+++ b/dts-consul/values.yaml
@@ -344,7 +344,14 @@ client:
     configSecret:
       secretName: null
       secretKey: null
-
+ingress:
+  enabled: true
+  annotations: {}
+    # kubernetes.io/ingress.class: traefik
+  hosts:
+  - consul.marcusrd.dts-stn.com
+ingressRoute:
+  enabled: true
 # Configuration for DNS configuration within the Kubernetes cluster.
 # This creates a service that routes to all agents (client or server)
 # for serving DNS requests. This DOES NOT automatically configure kube-dns
