--- a/dts-vault/templates/server-ingress.yaml
+++ b/dts-vault/templates/server-ingress.yaml
@@ -1,44 +1,36 @@
-{{- if .Values.server.ingress.enabled -}}
-{{- $serviceName := include "vault.fullname" . -}}
-{{- $servicePort := .Values.server.service.port -}}
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "fullname" . -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ template "vault.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ $fullName }}
   labels:
-    helm.sh/chart: {{ include "vault.chart" . }}
-    app.kubernetes.io/name: {{ include "vault.name" . }}
+    app.kubernetes.io/name: dts-consul
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    {{- with .Values.server.ingress.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
-  {{- with .Values.server.ingress.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    # kubernetes.io/ingress.class: traefik
+    # kubernetes.io/tls-acme: "true"
+    # traefik.frontend.whitelistSourceRange: "198.103.152.51/32"
 spec:
-{{- if .Values.server.ingress.tls }}
+{{- if .Values.ingress.tls }}
   tls:
-  {{- range .Values.server.ingress.tls }}
+  {{- range .Values.ingress.tls }}
     - hosts:
       {{- range .hosts }}
-        - {{ . | quote }}
+        - {{ . }}
       {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
 {{- end }}
   rules:
-  {{- range .Values.server.ingress.hosts }}
-    - host: {{ .host | quote }}
+  {{- range .Values.ingress.hosts }}
+    - host: {{ . }}
       http:
         paths:
-        {{- range .paths }}
-          - path: {{ . }}
+          - path: /
             backend:
-              serviceName: {{ $serviceName }}
-              servicePort: {{ $servicePort }}
-        {{- end }}
+              serviceName: {{ template "vault.fullname" $ }}-ui
+              servicePort: http
   {{- end }}
 {{- end }}
