--- a/dts-sab/templates/deployment.yaml
+++ b/dts-sab/templates/deployment.yaml
@@ -22,10 +22,15 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-{{- if .Values.extraEnv }}
           env:
+{{- if .Values.extraEnv }}
 {{ toYaml .Values.extraEnv | indent 10 }}
 {{- end }}
+          - name: LD_PRELOAD
+            value: /opt/dynatrace/oneagent/agent/lib64/liboneagentproc.so
+          volumeMounts:
+          - mountPath: /opt/dynatrace/oneagent
+            name: oneagent
           ports:
             - name: http
               {{ if .Values.port }}
@@ -47,6 +52,30 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
+# initcontainer to download OneAgent
+      initContainers:
+        - name: install-oneagent
+          image: alpine:3.8
+          command:
+          - /bin/sh
+          args:
+          - -c
+          - ARCHIVE=$(mktemp) && wget -O $ARCHIVE "$DT_API_URL/v1/deployment/installer/agent/unix/paas/latest?Api-Token=$DT_PAAS_TOKEN&$DT_ONEAGENT_OPTIONS" && unzip -o -d /opt/dynatrace/oneagent $ARCHIVE && rm -f $ARCHIVE
+          env:
+          - name: DT_API_URL
+            value: https://{{ .Values.dynatrace.environmentId }}.live.dynatrace.com/api
+          - name: DT_PAAS_TOKEN
+            value: {{ .Values.dynatrace.paasToken }}
+          - name: DT_ONEAGENT_OPTIONS
+            value: flavor=all&include=default
+          volumeMounts:
+          - mountPath: /opt/dynatrace/oneagent
+            name: oneagent
+
+      # Make OneAgent available as a volume
+        volumes:
+        - name: oneagent
+          emptyDir: {}      
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
