Adding dynatrace agent to mts-nodejs

--- a/mts-nodejs/values.yaml
+++ b/mts-nodejs/values.yaml
@@ -8,6 +8,11 @@
 ## ref: https://hub.docker.com/r/bitnami/node/tags/
 ##
 
+dynatrace:
+  environmentId: changeme
+  paasToken: changeme
+  options: flavor=all&include=default
+
 networkPolicy:
   enabled: false 
   ingressPodMatchLabels:
