--- a/mts-nodejs/templates/deployment.yaml
+++ b/mts-nodejs/templates/deployment.yaml
@@ -77,6 +77,25 @@ spec:
           mountPath: /app
         - name: data
           mountPath: {{ .Values.persistence.path }}
+      # initcontainer to download OneAgent
+      initContainers:
+        - name: install-oneagent
+          image: alpine:3.8
+          command:
+          - /bin/sh
+          args:
+          - -c
+          - ARCHIVE=$(mktemp) && wget -O $ARCHIVE "$DT_API_URL/v1/deployment/installer/agent/unix/paas/latest?Api-Token=$DT_PAAS_TOKEN&$DT_ONEAGENT_OPTIONS" && unzip -o -d /opt/dynatrace/oneagent $ARCHIVE && rm -f $ARCHIVE
+          env:
+          - name: DT_API_URL
+            value: https://{{ .Values.dynatrace.environmentId }}.live.dynatrace.com/api
+          - name: DT_PAAS_TOKEN
+            value: {{ .Values.dynatrace.paasToken }}
+          - name: DT_ONEAGENT_OPTIONS
+            value: {{ .Values.dynatrace.options }}
+          volumeMounts:
+          - mountPath: /opt/dynatrace/oneagent
+            name: oneagent
       volumes:
       - name: app
         emptyDir: {}
@@ -87,3 +106,5 @@ spec:
       {{- else }}
         emptyDir: {}
       {{- end }}
+      - name: oneagent
+        emptyDir: {}  
