--- a/dts-mongodb/Chart.yaml
+++ b/dts-mongodb/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 name: dts-mongodb
-version: 0.1.0
-appVersion: 4.0.12
-description: FORKED FROM stable/mongodb NoSQL document-oriented database that stores JSON-like documents with dynamic schemas, simplifying the integration of data in content-driven applications.
+version: 7.8.7
+appVersion: 4.2.3
+description: Forked from stable/mongodb 7.8.7
 keywords:
 - mongodb
 - database
