--- a/dts-dynatrace-agent/crds/customresourcedefinition.yaml
+++ b/dts-dynatrace-agent/crds/customresourcedefinition.yaml
@@ -16,6 +16,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: oneagents.dynatrace.com
+  annotations:
+    "helm.sh/hook": crd-install
 spec:
   additionalPrinterColumns:
     - JSONPath: .spec.apiUrl
