--- a/dts-dynatrace-agent/templates/Kubernetes/configmap.yaml
+++ b/dts-dynatrace-agent/templates/Kubernetes/configmap.yaml
@@ -6,5 +6,5 @@ metadata:
     "helm.sh/hook": pre-install, pre-upgrade
     "helm.sh/hook-weight": "-5"
   data:
-    customResource.yaml |
-      {{.Files.Get "files/customResource.yaml" | indent 6}}
+    customResource.yaml |-
+      {{.Files.Get "../files/customResource.yaml" }}
