--- a/dts-dynatrace-agent/templates/Kubernetes/customResource.yaml
+++ b/dts-dynatrace-agent/templates/Kubernetes/customResource.yaml
@@ -1,3 +1,3 @@
 {{- if not (.Capabilities.APIVersions.Has "piextensions.k8s.io/v1beta1/OneAgent") }}
 {{.Files.Get "files/customResource.yaml"}}
-{{- endif }}
+{{- end }}
