--- a/dts-odoo/Chart.yaml
+++ b/dts-odoo/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: odoo
+name: dts-odoo
 version: 13.0.7
 appVersion: 12.0.20200315
 description: A suite of web based open source business apps.
