--- a/dts-odoo/templates/ingress.yaml
+++ b/dts-odoo/templates/ingress.yaml
@@ -1,37 +1,37 @@
-{{- if .Values.ingress.enabled }}
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "fullname" . -}}
+{{- $servicePort := .Values.service.port -}}
+{{- $ingressPath := .Values.ingress.path -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ template "odoo.fullname" . }}
+  name: {{ $fullName }}
   labels:
-    app: {{ template "odoo.name" . }}
-    chart: {{ template "odoo.chart" . }}
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
+    app.kubernetes.io/name: {{ include "name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
-    {{- if .Values.ingress.certManager }}
-    kubernetes.io/tls-acme: "true"
-    {{- end }}
-    {{- range $key, $value := .Values.ingress.annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+    # kubernetes.io/ingress.class: traefik
+    # kubernetes.io/tls-acme: "true"
 spec:
+{{- if .Values.ingress.tls }}
+  tls:
+  {{- range .Values.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-  - host: {{ .name }}
-    http:
-      paths:
-        - path: {{ default "/" .path }}
-          backend:
-            serviceName: {{ template "odoo.fullname" $ }}
-            servicePort: http
+    - host: {{ . }}
+      http:
+        paths:
+          - path: {{ $ingressPath }}
+            backend:
+              serviceName: {{ $fullName }}
+              servicePort: http
   {{- end }}
-  tls:
-{{- range .Values.ingress.hosts }}
-  - hosts:
-{{- if .tls }}
-    - {{ .name }}
-    secretName: {{ .tlsSecret }}
-{{- end }}
-{{- end }}
 {{- end }}
