--- a/dts-odoo/templates/deployment.yaml
+++ b/dts-odoo/templates/deployment.yaml
@@ -25,16 +25,16 @@ spec:
         image: {{ template "odoo.image" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         {{- if .Values.proxymode.enabled }}
-        command: ["--proxy-mode"]
+        args: ["odoo", "--proxy-mode"]
         {{- end }}
         env:
-        - name: POSTGRESQL_HOST
+        - name: HOST
           value: {{ ternary (include "odoo.postgresql.fullname" .) .Values.externalDatabase.host .Values.postgresql.enabled | quote }}
-        - name: POSTGRESQL_USER
+        - name: USER
           value: {{ ternary "postgres" .Values.externalDatabase.user .Values.postgresql.enabled | quote }}
-        - name: POSTGRESQL_PORT_NUMBER
+        - name: PORT
           value: {{ ternary "5432" .Values.externalDatabase.port .Values.postgresql.enabled | quote }}
-        - name: POSTGRESQL_PASSWORD
+        - name: PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ ternary (include "odoo.postgresql.fullname" .) (printf "%s-%s" .Release.Name "externaldb") .Values.postgresql.enabled | quote }}
@@ -98,7 +98,7 @@ spec:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
         - name: odoo-data
-          mountPath: /bitnami/odoo
+          mountPath: /odoo
       volumes:
       - name: odoo-data
       {{- if .Values.persistence.enabled }}
