--- a/dts-odoo/values.yaml
+++ b/dts-odoo/values.yaml
@@ -13,7 +13,7 @@
 ##
 image:
   registry: docker.io
-  repository: bitnami/odoo
+  repository: odoo
   tag: 13.0
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -83,7 +83,7 @@ postgresql:
   ## PostgreSQL password
   ## ref: https://hub.docker.com/_/postgres/
   ##
-  postgresqlPassword: DTSPassword1
+  postgresqlPassword: 
 
   ## Enable persistence using Persistent Volume Claims
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
@@ -201,7 +201,7 @@ resources:
 
 proxymode:
   enabled: false
-  
+
 ## Configure extra options for liveness and readiness probes
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes)
 livenessProbe:
