Added network policy

--- a/dts-odoo/templates/deployment.yaml
+++ b/dts-odoo/templates/deployment.yaml
@@ -18,6 +18,9 @@ spec:
         app: {{ template "odoo.name" . }}
         chart: {{ template "odoo.chart" . }}
         release: {{ .Release.Name | quote }}
+        {{- if not .Values.postgresql.enabled }}
+        {{ ternary .Values.externalDatabase.name .Values.externalDatabase.host .Values.externalDatabase.name }}-client: "true"
+        {{- end }}
     spec:
 {{- include "odoo.imagePullSecrets" . | indent 6 }}
       containers:
