Changing image pull from template to values

--- a/dts-odoo/templates/deployment.yaml
+++ b/dts-odoo/templates/deployment.yaml
@@ -25,7 +25,8 @@ spec:
 {{- include "odoo.imagePullSecrets" . | indent 6 }}
       containers:
       - name: {{ template "odoo.fullname" . }}
-        image: {{ template "odoo.image" . }}
+        image: {{ .Values.image.repository }}
+        tag: {{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         {{- if .Values.proxymode.enabled }}
         args: ["odoo", "--proxy-mode"]
