--- a/dts-odoo/values.yaml
+++ b/dts-odoo/values.yaml
@@ -88,7 +88,7 @@ postgresql:
   ## PostgreSQL password
   ## ref: https://hub.docker.com/_/postgres/
   ##
-  postgresqlPassword: 
+  postgresqlPassword: changeme
 
   ## Enable persistence using Persistent Volume Claims
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
