--- a/dts-odoo/templates/deployment.yaml
+++ b/dts-odoo/templates/deployment.yaml
@@ -8,6 +8,10 @@ metadata:
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
 spec:
+  {{- if .Values.deploymentStrategy }}
+  strategy:
+{{ toYaml .Values.deploymentStrategy | indent 4 }}
+  {{- end }}
   selector:
     matchLabels:
       app: {{ template "odoo.name" . }}
