Fixing typo in odootest

--- a/ben-odootest/templates/deployment.yaml
+++ b/ben-odootest/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
 {{- include "odoo.imagePullSecrets" . | indent 6 }}
       containers:
       - name: {{ template "odoo.fullname" . }}
-        image: {{ .Values.image.repoistory }}:{{ .Values.image.tag }}
+        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
         - name: POSTGRESQL_HOST
