--- a/ben-odootest/values.yaml
+++ b/ben-odootest/values.yaml
@@ -11,6 +11,12 @@
 ## Bitnami Odoo image version
 ## ref: https://hub.docker.com/r/bitnami/odoo/tags/
 ##
+##
+networkPolicy:
+  enabled: false 
+  egressPodMatchLabels:
+    app: postgresql
+    
 image:
   registry: docker.io
   repository: bitnami/odoo
