Changing ingress rule selector

--- a/ben-odootest/templates/network-policy.yaml
+++ b/ben-odootest/templates/network-policy.yaml
@@ -6,9 +6,8 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: {{ template "odoo.name" . }}
-      app.kubernetes.io/instance: "{{ .Release.Name }}"
-      app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
+      app: {{ template "odoo.name" . }}
+      release: "{{ .Release.Name }}"
   policyTypes:
   {{- if .Values.networkPolicy.ingressRules }}
   - Ingress
