--- a/dts-odoo/templates/ingress.yaml
+++ b/dts-odoo/templates/ingress.yaml
@@ -1,27 +1,37 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "fullname" . -}}
-{{- $servicePort := .Values.service.port -}}
-{{- $ingressPath := .Values.ingress.path -}}
+{{- if .Values.ingress.enabled }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ template "odoo.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app: {{ template "odoo.name" . }}
+    chart: {{ template "odoo.chart" . }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
   annotations:
-    # kubernetes.io/ingress.class: traefik
-    # kubernetes.io/tls-acme: "true"
+    {{- if .Values.ingress.certManager }}
+    kubernetes.io/tls-acme: "true"
+    {{- end }}
+    {{- range $key, $value := .Values.ingress.annotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: {{ . }}
-      http:
-        paths:
-          - path: {{ $ingressPath }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
+  - host: {{ .name }}
+    http:
+      paths:
+        - path: {{ default "/" .path }}
+          backend:
+            serviceName: {{ template "odoo.fullname" $ }}
+            servicePort: http
   {{- end }}
+  tls:
+{{- range .Values.ingress.hosts }}
+  - hosts:
+{{- if .tls }}
+    - {{ .name }}
+    secretName: {{ .tlsSecret }}
+{{- end }}
+{{- end }}
 {{- end }}
