--- a/dts-odoo/values.yaml
+++ b/dts-odoo/values.yaml
@@ -11,10 +11,16 @@
 ## Bitnami Odoo image version
 ## ref: https://hub.docker.com/r/bitnami/odoo/tags/
 ##
+##
+networkPolicy:
+  enabled: false 
+  egressPodMatchLabels:
+    app: postgresql
+    
 image:
   registry: docker.io
-  repository: odoo
-  tag: 13.0
+  repository: bitnami/odoo
+  tag: 12.0.20200315-debian-10-r12
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -38,18 +44,18 @@ image:
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-odoo#configuration
 ##
-odooUsername: admin@dts.com
+odooUsername: user@example.com
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-odoo#configuration
 ##
-odooEmail: admin@dts.com
+odooEmail: user@example.com
 
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-odoo#configuration
 ##
-odooPassword: 
+# odooPassword:
 
 ## SMTP mail delivery configuration
 ## ref: https://github.com/bitnami/bitnami-docker-odoo/#smtp-configuration
@@ -58,17 +64,6 @@ odooPassword:
 # smtpUser:
 # smtpPassword:
 # smtpProtocol:
-
-networkPolicy:
-  enabled: false 
-  egressPodMatchLabels:
-    app: postgresql
-
-database:
-  host: changeme
-  user: changeme
-  port: changeme
-  password: changeme
 
 externalDatabase:
 ## All of these values are only used when postgresql.enabled is set to false
@@ -94,7 +89,7 @@ postgresql:
   ## PostgreSQL password
   ## ref: https://hub.docker.com/_/postgres/
   ##
-  postgresqlPassword: changeme
+  # postgresqlPassword:
 
   ## Enable persistence using Persistent Volume Claims
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
@@ -148,16 +143,21 @@ service:
 ## ref: http://kubernetes.io/docs/user-guide/ingress/
 ##
 ingress:
-  enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  paths: []
+  ## Set to true to enable ingress record generation
+  enabled: false
+
+  ## The list of hostnames to be covered with this ingress record.
+  ## Most likely this will be just one host, but in the event more hosts are needed, this is an array
   hosts:
-    - chart-example.local
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  - name: odoo.local
+    path: /
+
+    ## Set this to true in order to enable TLS on the ingress record
+    ## A side effect of this will be that the backend odoo service will be connected at port 443
+    tls: false
+
+    ## If TLS is set to true, you must declare what secret will store the key/certificate for TLS
+    tlsSecret: odoo.local-tls
 
   ## Set this to true in order to add the corresponding annotations for cert-manager
   certManager: false
@@ -189,7 +189,7 @@ ingress:
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
 ##
 persistence:
-  enabled: false
+  enabled: true
   ## odoo data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -206,23 +206,20 @@ persistence:
 ##
 resources:
   requests:
-    memory: 2Gi
-    cpu: 600m
-
-proxymode:
-  enabled: false
+    memory: 512Mi
+    cpu: 300m
 
 ## Configure extra options for liveness and readiness probes
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes)
 livenessProbe:
-  enabled: false
+  enabled: true
   initialDelaySeconds: 600
   periodSeconds: 30
   timeoutSeconds: 5
   failureThreshold: 6
   successThreshold: 1
 readinessProbe:
-  enabled: false
+  enabled: true
   initialDelaySeconds: 30
   periodSeconds: 10
   timeoutSeconds: 5
