--- a/dts-generic/templates/deployment.yaml
+++ b/dts-generic/templates/deployment.yaml
@@ -8,8 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   {{- if .Values.deploymentStrategy }}
-  strategy:
-{{ toYaml .Values.deploymentStrategy | indent 4 }}
+  strategy: {{ toYaml .Values.deploymentStrategy }}
   {{- end }}    
   replicas: {{ .Values.replicaCount }}
   selector:
