--- a/dts-generic/templates/deployment.yaml
+++ b/dts-generic/templates/deployment.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
-  {{- if .Values.deploymentStrategy }}
-  strategy: {{ toYaml .Values.deploymentStrategy }}
+  {{- if .Values.updateStrategy }}
+  updateStrategy: {{ toYaml .Values.updateStrategy }}
   {{- end }}    
   replicas: {{ .Values.replicaCount }}
   selector:
