--- a/mts-confluence/templates/attachment-pvc.yaml
+++ b/mts-confluence/templates/attachment-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ template "fullname" . }}
+  name: confluence-attachments
   labels:
     app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
