--- a/mts-jira/templates/attachment-pvc.yaml
+++ b/mts-jira/templates/attachment-pvc.yaml
@@ -8,7 +8,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: "default"
+  storageClassName: {{ .Values.persistence.storageClassName }}
   volumeName: pv-jira-attachments-{{ .Values.jira.environment }}
 ---
 apiVersion: v1
@@ -16,7 +16,7 @@ kind: PersistentVolume
 metadata:
   name: pv-jira-attachments-{{ .Values.jira.environment }}
 spec:
-  storageClassName: "default"
+  storageClassName: {{ .Values.persistence.storageClassName }}
   capacity:
     storage: 5Gi
   accessModes:
