--- a/mts-jira/templates/deployment.yaml
+++ b/mts-jira/templates/deployment.yaml
@@ -24,6 +24,8 @@ spec:
         service: mtsjira
     spec:
       restartPolicy: Always
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
       containers:
       - name: mtsjira
         image: {{ .Values.jira.image }}
