--- a/mts-confluence/values.yaml
+++ b/mts-confluence/values.yaml
@@ -7,6 +7,9 @@ replicaCount: 1
 persistence:
   enabled: true
 
+securityContext:
+  fsGroup: 1000
+
 confluence:
    image: mtscontainers.azurecr.io/mtsconfluence:0.3.1
    url: confluence.mobiletechnology.solutions
